# S-y-N-t-a-X

./: README.md  pyproject.toml  requirements.txt
.chroma/: chroma.sqlite3
ai_cli/: main.py
ai_cli/agents/: __init__.py  debugger.py
ai_cli/config/: database.py  settings.py
ai_cli/llms/: gemini_client.py  manager.py  ollama_client.py
ai_cli/memory/: vector_store.py
ai_cli/tools/: file_operations.py
ai_cli/ui/: interactive.py  llm_config.py
syntax_ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_agents.py  test_integration.py  test_llms.py  test_main.py  test_tools.py
